# PST-Email-Extractor

./: .gitignore  LICENSE  NOTICE  README.md  build_executable.py  gui.py  launch.py  main.py  pyproject.toml  requirements.txt  sample_emails.py  setup.py  tatus  test_modules.py
.github/workflows/: ci.yml
pst_tools/: __init__.py  banner.py  exporters.py  id_generator.py  pst_parser.py
src/pst_email_extractor/: __init__.py  config.py  id_generator.py  logging.py  profiling.py  pst_parser.py
src/pst_email_extractor/ai/: README.md  pipeline.py
src/pst_email_extractor/ai/data/: abbreviations.txt  email_terminology.txt  frequency_dictionary_clinical_en.txt  frequency_dictionary_zh_cn.txt
src/pst_email_extractor/cli/: __init__.py  app.py
src/pst_email_extractor/core/: __init__.py  analysis.py  attachment_processor.py  extraction.py  models.py  security.py  services.py
src/pst_email_extractor/core/backends/: __init__.py  base.py  pypff.py
src/pst_email_extractor/exporters/: __init__.py  base.py  csv_writer.py  eml_writer.py  html_index.py  json_writer.py  mbox_writer.py
src/pst_email_extractor/gui/: __init__.py  main.py
tests/integration/: test_ai_processing.py  test_extraction_pipeline.py  test_gui_smoke.py
tests/unit/: test_ai_integration.py  test_ai_pipeline.py  test_attachment_failures.py  test_attachment_naming.py  test_attachment_security.py  test_batching.py  test_cli.py  test_exporters.py  test_extraction_success.py  test_gui_smoke.py  test_health.py  test_malformed_pst.py  test_package.py  test_progress_tracking.py  test_pst_parser.py
